<resources>
    <string name="app_name">Split Bill</string>
    <string name="dollar_sign">$</string>
    <string name="placeholder_dollars">00.00</string>
    <string name="tip">Tip: </string>
    <string name="placeholder_tip">15</string>
    <string name="percent_sign">%</string>
    <string name="ppl">Number of People: </string>
    <string name="placeholder_ppl">2</string>
    <string name="calc_btn">Calculate</string>
    <string name="receipt"><u>Your Receipt</u></string>
    <string name="subtotal">Subtotal: </string>
    <string name="total"><b>Total: </b></string>
    <string name="per">Per Person </string>
    <string name="clear_btn">Clear</string>

    <!--Dialog-->
    <string name="update">Update</string>
    <string name="update_msg">
        Version Date: February 28, 2022\n
        <a href="https://appsbyanl.herokuapp.com/">Check for Update</a>
    </string>
    <string name="dismiss_btn">Dismiss</string>
</resources>